--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-discord.py>=2.3.0
-mcp>=0.1.0
+discord.py>=2.3.2
+PyNaCl>=1.5.0
+python-dotenv>=1.0.0
+# Zusätzliche Abhängigkeiten für PyNaCl
+cffi>=1.15.0
+pycparser>=2.21
